apps/desktop/src/styles.css
@import "tailwindcss";

:root {
  --floral-white: #fffcf2ff;
  --dust-grey: #ccc5b9ff;
  --charcoal-brown: #403d39ff;
  --carbon-black: #252422ff;
  --light-caramel: #feba7e;

  color: var(--floral-white);
  background: var(--carbon-black);
  font-family:
    Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    sans-serif;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

body {
  min-width: 960px;
  min-height: 640px;
  margin: 0;
}

button,
input {
  font: inherit;
}

input[type="range"] {
  width: 100%;
}

